--- a/runnermap-challange-rest/package.json
+++ b/runnermap-challange-rest/package.json
@@ -12,12 +12,17 @@
   "author": "Petko Petkov & Ivailo Stoyanov",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.10.1",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.1",
+    "prisma": "^4.10.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
 }
